--- a/docs/disparity_analysis_CCDPH_20210617.Rmd
+++ b/docs/disparity_analysis_CCDPH_20210617.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Untitled"
+title: "Estimating Chronic Disease Disparity, Chicago Metro and CCDPH Jurisdiction"
 author: "C. Scott Smith, PhD AICP"
 date: "6/14/2021"
 output: bookdown:html_document2
